Added rest get for all clusters
